# energy_grid_research_agent

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/commands/: check.md  ollama-status.md  research.md  reset-data.md  smoke.md
config/: prompts.yaml  settings.yaml
src/energy_grid_research_agent/: __init__.py  __main__.py  config.py  eval.py  graph.py  network_guard.py  prompts.py  report.py  serve.py
src/energy_grid_research_agent/agents/: decomposer.py  extraction.py  retrieval.py  synthesis.py  validation.py
src/energy_grid_research_agent/corpus/: generator.py
src/energy_grid_research_agent/retrieval/: chain.py  embedder.py
src/energy_grid_research_agent/tools/: calculate.py  extract.py  registry.py  search.py
tests/: conftest.py
tests/integration/: conftest.py  test_pipeline.py
tests/unit/: test_agents.py  test_graph.py  test_prompts.py  test_tools.py
