[project]
name = "energy-grid-research-agent"
version = "0.1.0"
description = "Multi-Framework Agentic RAG System for Industrial Technical Document Analysis"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"

dependencies = [
    "agno>=1.0",
    "langchain>=0.2",
    "langchain-community>=0.2",
    "langchain-chroma>=0.1",
    "langgraph>=0.2",
    "chromadb>=0.5",
    "pdfplumber>=0.11",
    "pydantic>=2.6",
    "pydantic-settings>=2.3",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "rich>=13.7",
    "loguru>=0.7",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "ty>=0.0.1a6",
]

[project.scripts]
energy-grid-research = "energy_grid_research_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/energy_grid_research_agent"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.ty]
python-version = "3.11"
